# nvidia-texture-tools

./: CMakeLists.txt  ChangeLog  LICENSE  README.md
.github/workflows/: build.yml  release.yml
cmake/: OptimalOptions.cmake
src/: CMakeLists.txt
src/bc6h/: CMakeLists.txt
src/bc7/: CMakeLists.txt
src/nvcore/: CMakeLists.txt  Debug.h
src/nvimage/: CMakeLists.txt
src/nvmath/: CMakeLists.txt  nvmath.h
src/nvthread/: CMakeLists.txt
src/nvtt/: CMakeLists.txt
src/nvtt/squish/: CMakeLists.txt
src/nvtt/tools/: assemble.cpp  compress.cpp  decompress.cpp
